// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> can be \`fixed\` 1`] = `
<ul
  className="sidenav sidenav-fixed red"
  id="sidenav_mockId"
/>
`;

exports[`<SideNav /> can render a \`trigger\` 1`] = `
<button
  className="trigger show-on-large sidenav-trigger"
  data-target="sidenav_mockId"
>
  Show sidenav
</button>
`;

exports[`<SideNav /> renders 1`] = `
<ul
  className="sidenav"
  id="sidenav_mockId"
/>
`;

exports[`<SideNav /> should be fixed if no trigger is passed 1`] = `
<ul
  className="sidenav sidenav-fixed red"
  id="sidenav_mockId"
/>
`;
